# milligrad

./: .gitignore  README.md  engine.py  nn.py  pyproject.toml
core/: engine.py  nn.py
examples/: demo.ipynb  fashion_mnist.ipynb  fashion_mnist_demo.ipynb
milligrad/: __init__.py  milligrad.py  nn.py
milligrad.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_milligrad.py  tests.py
