[project]
name = "milligrad"
version = "0.1.0"
description = "A minimal autograd engine with n-dimensional tensor support"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Tristan Farran"}
]
keywords = ["autograd", "neural-networks", "deep-learning", "machine-learning", "tensor"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
examples = [
    "matplotlib>=3.3",
    "scikit-learn>=1.0",
]

[build-system]
requires = ["setuptools>=45", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"
